[tool.poetry]
name = "githubble"
version = "1.0.0"
description = ""
authors = ["lavoisierrenaud <renaud.lavoisier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
requests = "^2.32.3"
pydantic-settings = "^2.6.1"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
ruff = "^0.7.4"
mypy = "^1.13.0"
redis = "^5.2.0"
pre-commit = "^4.0.1"
types-redis = "^4.6.0.20241004"
pydantic = {extras = ["mypy"], version = "^2.9.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
