[tool.poetry]
name = "githubble"
version = "1.0.0"
description = ""
authors = ["lavoisierrenaud <renaud.lavoisier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
requests = "^2.32.3"
pydantic-settings = "^2.6.1"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
ruff = "^0.7.4"
mypy = "^1.13.0"
redis = "^5.2.0"
pre-commit = "^4.0.1"
types-redis = "^4.6.0.20241004"
pydantic = {extras = ["email"], version = "^2.10.0"}
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
uvicorn = "^0.32.1"
bcrypt = "^4.2.1"
orjson = "^3.10.11"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.dev.dependencies]
pyinstrument = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
